src/objects/QPMS__Supplier_Change__c.object
<CustomObject>
    <description>The Supplier Change Request provides a streamlined, self-service process for reviewing existing information and requesting a change to supplier profile information.</description>
    <fields>
        <fullName>QPMS__Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer\Supplier</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                    <isActive>false</isActive>
                    <label>Facility</label>
                </value>
                <value>
                    <fullName>Test Record Type</fullName>
                    <isActive>false</isActive>
                    <label>Test Record Type</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <description>Supplier Change Request Age</description>
        <formula>TODAY() - DATEVALUE(  CreatedDate  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Decision_Comments__c</fullName>
        <description>Approval Decision Comments</description>
        <inlineHelpText>Approval Decision Comments</inlineHelpText>
        <label>Approval Decision Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>to store the approval group name</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process__c</fullName>
        <description>Approval Process</description>
        <label>Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change Due Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag for Supplier Change approval</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>Holds the status of audit approval</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Supplier Change</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Supplier Change</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_Changes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Supplier Change</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_Changes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Supplier Change</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__AuditCoordinator__c</fullName>
        <formula>QPMS__Audit_Coordinator__r.FirstName +&apos; &apos;+ QPMS__Audit_Coordinator__r.LastName</formula>
        <label>Audit Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Audit Coordinator</description>
        <label>Audit Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_ChangesvYrw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Audit Required?</description>
        <label>Audit Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity_Group__c</fullName>
        <description>Authorized Entity Group</description>
        <label>Authorized Entity Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity__c</fullName>
        <description>To store Authorized Entity users data</description>
        <label>Authorized Entity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <description>Business Unit</description>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BU 1</fullName>
                </value>
                <value>
                    <fullName>BU 2</fullName>
                </value>
                <value>
                    <fullName>BU 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Category__c</fullName>
        <description>Category</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
                <value>
                    <fullName>Category 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>ChangeFieldApprovalStatus</description>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Change_Field_Approval_Comments__c</fullName>
        <description>Change Field Approval Comments</description>
        <label>Change Field Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <description>Closed Date</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Closure_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closure Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Closure_Comment__c</fullName>
        <description>Closure Comment</description>
        <label>Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Commodity_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Commodity Code</description>
        <label>Commodity Code</label>
        <referenceTo>QPMS__Commodity_Code__c</referenceTo>
        <relationshipLabel>Supplier Changes</relationshipLabel>
        <relationshipName>Supplier_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_By__c</fullName>
        <description>Created By</description>
        <formula>Owner:User.FirstName+&apos; &apos;+ Owner:User.LastName</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>sequence number to sect the approvers</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>Due Date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Store on/off value of security</description>
        <inlineHelpText>To Store on/off value of security</inlineHelpText>
        <label>Enable Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <description>To hold followers for this record</description>
        <inlineHelpText>To hold followers for this record</inlineHelpText>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Hold the initial submitter</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_ChangesvLZP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Initiating Site Security</description>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initiation Site To Which user belongs to</description>
        <inlineHelpText>Initiation Site To Which user belongs to</inlineHelpText>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Supplier Changes</relationshipLabel>
        <relationshipName>Supplier_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Location__c</fullName>
        <description>Location</description>
        <label>Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <description>New Due Date value</description>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Owner value</description>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_ChangesMW5u</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_DueDate__c</fullName>
        <description>this Field is to capture due date note approver</description>
        <label>Note To Approver DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>Note To Approver Owner/DueDate</description>
        <label>Note To Approver Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>To save audit approvers note</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner__c</fullName>
        <description>holds owner value</description>
        <formula>Owner:User.FirstName+&apos; &apos;+Owner:User.LastName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Pagelock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>it is used to lock and unlock the page</description>
        <label>Pagelock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Certificates__c</fullName>
        <label>Parent Certificates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Proposed_Audit_Date__c</fullName>
        <description>Proposed Audit Date value</description>
        <label>Proposed Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <description>Purpose value</description>
        <label>Purpose</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Question_Process__c</fullName>
        <description>Question Process value</description>
        <label>Question Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>saved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ReOpned_Date__c</fullName>
        <description>ReOpned Date value</description>
        <label>ReOpned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>Reason value</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Level__c</fullName>
        <description>Risk Level value</description>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk 1</fullName>
                </value>
                <value>
                    <fullName>Risk 2</fullName>
                </value>
                <value>
                    <fullName>Risk 3</fullName>
                </value>
                <value>
                    <fullName>Risk 4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>Sequence value</description>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Site__c</fullName>
        <description>Site</description>
        <label>Site</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Skip_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Skip Questionnaire</description>
        <label>Skip Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__SupplierProfileAccountId__c</fullName>
        <formula>QPMS__Supplier_Profile__r.QPMS__Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SupplierProfileAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SupplierProfileContacttId__c</fullName>
        <formula>QPMS__Supplier_Profile__r.QPMS__Supplier_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SupplierProfileContacttId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SupplierProfileName__c</fullName>
        <formula>QPMS__Supplier_Profile__r.QPMS__Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SupplierProfileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SupplierProfileNumber__c</fullName>
        <formula>QPMS__Supplier_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Profile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Account</description>
        <label>Supplier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Changes</relationshipLabel>
        <relationshipName>Supplier_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Change_Name__c</fullName>
        <description>Supplier Change Name</description>
        <label>Supplier Change Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Change_Number__c</fullName>
        <formula>HYPERLINK($Setup.QPMS__QC_settings__c.QPMS__URL__c+&apos;/apex/SupplierChangeRequest?Id=&apos;+Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Change Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Questionnaire</description>
        <label>Supplier Questionnaire</label>
        <referenceTo>QPMS__Supplier_Checklist__c</referenceTo>
        <relationshipLabel>Supplier Changes</relationshipLabel>
        <relationshipName>Supplier_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Part_Number__c</fullName>
        <description>Supplier Part Number</description>
        <label>Supplier Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Profile_Account_Name__c</fullName>
        <description>Supplier Profile Account Name</description>
        <label>Supplier Profile Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Profile_Name__c</fullName>
        <formula>QPMS__Supplier_Profile__r.QPMS__Supplier_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Profile</description>
        <label>Supplier Profile</label>
        <referenceTo>QPMS__Supplier_Profile__c</referenceTo>
        <relationshipLabel>Supplier Changes</relationshipLabel>
        <relationshipName>Supplier_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>Title value</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Activate</fullName>
                    <isActive>false</isActive>
                    <label>Activate</label>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                    <isActive>false</isActive>
                    <label>Deactivate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity_Group__c</fullName>
        <description>View Only Entity Group</description>
        <label>View Only Entity Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity__c</fullName>
        <description>To store view only entity data values</description>
        <label>View Only Entity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__isEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to hold value of isEditable</description>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to hold value of isLocked</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isQuestionniareCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to hold value for isQuestionniareCompleted</description>
        <label>isQuestionniareCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hold value for isSubmit</description>
        <label>isSubmit</label>
        <type>Checkbox</type>
    </fields>
    <label>Supplier Change</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Supplier_Part_Number__c</columns>
        <columns>QPMS__Commodity_Code__c</columns>
        <columns>QPMS__Supplier_Profile__c</columns>
        <columns>QPMS__Supplier_Account__c</columns>
        <columns>QPMS__Location__c</columns>
        <columns>QPMS__Site__c</columns>
        <columns>QPMS__Business_Unit__c</columns>
        <columns>QPMS__Risk_Level__c</columns>
        <columns>QPMS__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Supplier Change Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Changes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>